--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <hr />
 
 
-  <a href="hobbies.Html"> My Hobbies </a>
+  <a href="hobbies.HTML"> My Hobbies </a>
   <a href="contact-me.HTML"> Contact Me </a>
 </body>
 
